add what I have now

--- a/app/views/main/aboutus.html.erb
+++ b/app/views/main/aboutus.html.erb
@@ -99,9 +99,11 @@ IMAGE DIMENSIONS ARE 99px by 99px, or 3.49cm by 3.49cm
       <p class="nameProfile">Dylan Wang</p>
       <p class ="titleProfile">Your Title</p>
       <p>
-        Your descripton
+        Dylan co-founded UrineLuck in 2016. He acts as the absolute MADMAN. Before creating UrineLuck, 
+        he was dedicated to sleeping and doing nothing. He kinda woke up and found himself lost everything 
+        valuable but all was too late. He now trying to make himself great again.
         <br/> <br/>
-        Your Qualifications.
+        Dylan holds the music game degree of touchscreen jubeat, osu!, and phd. of Defence of the Ancient.
       </p>
       </div>
       <br/>
