--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,6 +191,14 @@
  }
 
 
+//for header
+
+
+//end for header
+
+
+
+
  .row{
    margin-left: 0px;
    margin-right: 0px;
@@ -255,3 +263,5 @@ width: 50px;
 height: 50px;
 border: 0 none;
 }
+
+.clear { clear:both; }
