--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -9,14 +9,14 @@
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <br><%= link_to user_facebook_omniauth_authorize_path, class: "btn btn-block btn-social btn-facebook" do %>
-   <span class="fa fa-facebook"></span> Sign in with Facebook
+   <div class="fa fa-facebook"></div> Sign in with Facebook
     <% end %>      
   <% end -%>
 <% end -%>
 
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <br><%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-info" %><br />
+  <br><%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-info", margin:"auto" %><br />
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
