--- a/app/views/reviews/reported.html.erb
+++ b/app/views/reviews/reported.html.erb
@@ -13,7 +13,7 @@
                     <td><%= review.post %></td>
                 </tr>
                 <tr>
-                <th><%= button_to('DESTROY', bath_review_destroy_path(review.bath_id, review), method: :delete, data: { confirm: "You sure?" }, :class => 'btn btn-danger')  %></th>
+                <th><%= button_to('Destroy', bath_review_destroy_path(review.bath_id, review), method: :delete, data: { confirm: "You sure?" }, :class => 'btn btn-danger')  %></th>
                 </tr>
                 <hr>
             </table>
