--- a/app/views/main/directions.html.erb
+++ b/app/views/main/directions.html.erb
@@ -1,21 +1,115 @@
-    <div id="floating-panel">
-    <b>Mode of Travel: </b>
-    <select id="mode">
-      <option value="DRIVING">Driving</option>
-      <option value="WALKING">Walking</option>
-      <option value="BICYCLING">Bicycling</option>
-      <option value="TRANSIT">Transit</option>
-    </select>
-    </div>
+<style>
+#right-panel {
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
+  line-height: 30px;
+  padding-left: 10px;
+}
 
-    <div id="map"></div>
-    <div id="right-panel">
-      <p>Total Distance: <span id="total"></span></p>
-    </div>
+#right-panel select, #right-panel input {
+  font-size: 15px;
+}
 
-    <div class="clear"></div>
+#right-panel select {
+  width: 100%;
+}
 
+#right-panel i {
+  font-size: 12px;
+}
 
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4MhM4eZ3aFFZMEZr34-YyswW6MjvqU6E&callback=initMap">
-    </script>
+#map {
+  height: 650px;
+  float: left;
+  width: 63%;
+}
+#right-panel {
+  float: right;
+  width: 34%;
+  height: 100%;
+}
+.panel {
+  height: 100%;
+  overflow: auto;
+}
+#floating-panel {
+  /*position: absolute;*/
+  top: 10px;
+  left: 25%;
+  z-index: 5;
+  background-color: #fff;
+  padding: 5px;
+  border: 1px solid #999;
+  text-align: center;
+  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;    text-align: center;
+  line-height: 30px;
+  padding-left: 10px;
+}
+</style>
+<div id="floating-panel">
+<b>Mode of Travel: </b>
+<select id="mode">
+  <option value="DRIVING">Driving</option>
+  <option value="WALKING">Walking</option>
+  <option value="BICYCLING">Bicycling</option>
+  <option value="TRANSIT">Transit</option>
+</select>
+</div>
+
+<div id="map"></div>
+<div id="right-panel">
+  <p>Total Distance: <span id="total"></span></p>
+</div>
+
+<div class="clear"></div>
+
+<script type="text/javascript">
+  function initMap() {
+    var map = new google.maps.Map(document.getElementById('map'), {
+      zoom: 4,
+      center: {lat: -24.345, lng: 134.46}  // Australia.
+    });
+    var directionsService = new google.maps.DirectionsService;
+    var directionsDisplay = new google.maps.DirectionsRenderer({
+      // draggable: true,
+      map: map,
+      panel: document.getElementById('right-panel')
+    });
+    displayRoute(<%= current_user.latitude %>, <%= current_user.longitude %>, <%= @bath.latitude %>, <%= @bath.longitude %>, directionsService, directionsDisplay);
+    document.getElementById('mode').addEventListener('change', function() {
+      displayRoute(<%= current_user.latitude %>, <%= current_user.longitude %>, <%= @bath.latitude %>, <%= @bath.longitude %>, directionsService, directionsDisplay);
+    });
+    // directionsDisplay.addListener('directions_changed', function() {
+    //   computeTotalDistance(directionsDisplay.getDirections());
+    // });
+    displayRoute(<%= current_user.latitude %>, <%= current_user.longitude %>, <%= @bath.latitude %>, <%= @bath.longitude %>, directionsService,
+        directionsDisplay);
+  }
+  function displayRoute(lat1, long1, lat2, long2, service, display) {
+    var selectedMode = document.getElementById('mode').value;
+    service.route({
+      origin: new google.maps.LatLng(lat1,long1),
+      destination: new google.maps.LatLng(lat2,long2),
+      // waypoints: [{location: 'Abbotsford, BC'}, {location: 'Vancouver, BC'}],
+      travelMode: google.maps.TravelMode[selectedMode],
+      avoidTolls: true
+    }, function(response, status) {
+      if (status === google.maps.DirectionsStatus.OK) {
+        display.setDirections(response);
+      } else {
+        alert('Could not display directions due to: ' + status);
+      }
+    });
+  }
+  function computeTotalDistance(result) {
+    var total = 0;
+    var myroute = result.routes[0];
+    for (var i = 0; i < myroute.legs.length; i++) {
+      total += myroute.legs[i].distance.value;
+    }
+    total = total / 1000;
+    document.getElementById('total').innerHTML = total + ' km';
+  }
+</script>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4MhM4eZ3aFFZMEZr34-YyswW6MjvqU6E&callback=initMap">
+</script>
