--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -130,3 +130,30 @@
 
             <% end %>
         <b><%= link_to "Leave A Review", new_bath_review_path(@bath), :class => 'btn btn-primary' %> </b>
+        
+<script type="text/javascript">
+//showsingle below
+myLatLng = new google.maps.LatLng({lat: <%= @bath.latitude %>, lng: <%= @bath.longitude %>});
+
+handler = Gmaps.build('Google');
+handler.buildMap({ provider: {zoom: 16, center: myLatLng}, internal: {id: 'map'}}, function(){
+markers = handler.addMarkers([
+    {
+        "lat": <%= @bath.latitude %>,
+        "lng": <%= @bath.longitude %>,
+        "picture": {
+                "url": "http://megaicons.net/static/img/icons_sizes/105/244/32/toilet-paper-icon.png",
+                 "width":  32,
+                 "height": 32
+        
+        },
+        "infowindow": "hello!"
+    }
+  ]);
+
+
+
+handler.bounds.extendWith(markers);
+//handler.fitMapToBounds();
+});
+</script>
