--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -43,7 +43,7 @@ h3 {
 }
 
 #motto p {
-  font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
+  font-family: "Montserrat";
 	font-size: 1.5rem;
 	text-shadow: none;
 	color: white;
