--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -108,7 +108,7 @@
 
                   <tr>
                       <th><b><%= User.find_by_id(review.user_id).name %> </b> </th>
-                      <td><span class = "star-rating" data-score=<%= review.rating %></span></td>
+                      <td><span class = "star-rating" data-score=<%= review.rating %>></span></td>
                   </tr>
 
                   <tr>
