--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,36 +7,46 @@ OTHERWISE IT LOOKS DIFFERENT ON DIFFERENT BROWSERS
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
     cursor: pointer;
-        border: none;
+    border-style: none;
 }
 .dropdown {
   padding: 0px 0px 0px 0px;
   margin: 0px 0px 0px 0px;
     position: relative;
     display: inline-block;
-        border: none;
+    border-style: none;
 }
 .dropdown-content {
     z-index: 3;
     display: none;
     position: absolute;
     min-width: 160px;
-        border: none;
+    border-style: solid;
+    border-width: 0.5px;
+    border-color: #d6f0fd;
 }
 .dropdown-content a {
     text-decoration: none;
     display: block;
-        border: none;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #d6f0fd;
 }
 .dropdown-content a:hover {
-    border: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #d6f0fd;
 }
 .dropdown:hover .dropdown-content {
-      border: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #d6f0fd;
     display: block;
 }
 .dropdown:hover .dropbtn {
-      border: none;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #d6f0fd;
 }
 /*
 THIS STYLE NEEDS TO STAY IN THE HEADER
