Changing img background colours

--- a/app/views/baths/index.html.erb
+++ b/app/views/baths/index.html.erb
@@ -8,7 +8,7 @@ Moving this to main.scss ruins the slideshow
 	height: 100%;
   width: 100%;
 	padding: 0px;
-  background-color: #303030;
+  background-color: #DCF3FF;
 	list-style-type: none;
 }
 
@@ -20,7 +20,7 @@ Moving this to main.scss ruins the slideshow
 	height: 100%;
 	opacity: 0;
 	z-index: 1;
-  background-color: #85DAF7;
+  background-color: #DCF3FF;
 
 
 	-webkit-transition: opacity 1s;
@@ -45,8 +45,8 @@ just for appearance; change whatever you want
 	font-size: 40px;
 	padding: 1px;
 	box-sizing: border-box;
-	background: red; /*DCF3FF*/
-	color: #fff;
+	background: #DCF3FF; /*DCF3FF*/
+	color: #DCF3FF;
 }
 
 .slide:nth-of-type(1){
