address same as last comit just hear for eddtiing purposes

--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -76,7 +76,7 @@
                     </tr>
 
                                                         <tr><%=  simple_form_for bath do |f| %>
-                                              <%= f.input :name, label: "Bathroom Name",  autofocus: true %>
+                                              <%= f.input :address, label: "Bathroom address",  autofocus: true %>
                                              <%= f.button :submit, "Create my bathroom", class: "btn btn-success" %>
                                     <% end %>
 
