added a use case modell and converted game from secret to a main feature

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,7 @@ OTHERWISE IT LOOKS DIFFERENT ON DIFFERENT BROWSERS
 
 </br>
 <ul class="TopRight">
-          <div class= "TopRightElementsSpecial"> <li><%= link_to 'CAREERS', newbath_path %></li>         </div>
+          <div class= "TopRightElementsSpecial"> <li><%= link_to 'GAME', game_path %></li>         </div>
           <div class= "TopRightElements"> <li><%= link_to 'CONTACT US', profile_path %></li>                </div>
           <div class= "TopRightElements"> <li><%= link_to 'NEWS', news_path %></li>                      </div>
           <div class= "TopRightElements"> <%= link_to 'ABOUT US', about_path %> </li>                    </div>
