--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -13,6 +13,7 @@
 <script src="phaser.min.js"></script>
 </head>
 <body>
+<h1>Flappy Tissue</h1>
 <div id="game"></div>
 <script src="game.js"></script>
 
