Changed Colors and Stuff

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,7 +6,7 @@
 #navbox-container {
   margin-left: auto;
 	margin-right: auto;
-  background-color: #74CCF4;
+  background-color: #CBECFD;
   display: flex;
 }
 
@@ -22,14 +22,14 @@
 }
 
 .navbox h2 {
-  color: white;
+  /*color: white;*/
   // text-shadow: 2px 2px #f4f5f0;
   margin: none;
   font-family: 'Montserrat';
 }
 
 .navbox p {
-  color: white;
+  /*color: white;*/
   margin: none;
   font-family: 'Montserrat';
   // text-shadow: 1px 1px 4px #f4f5f0;
