--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -1,7 +1,8 @@
 <!-- Begin adding bathroom to database -->
 
 
-<h1>Add your bathroom</h1>
+<div class="smallmotto">
+    <h2>Add Your Bathroom</h2>
 <div class="row">
   <div class="col-md-6 col-md-offset-3 well">
     <%= simple_form_for @bath, html: {multipart: true, class: 'form-horizontal'} do |f| %>
@@ -16,21 +17,21 @@
         </div>
       <% end %>
       <%= f.input :name, label: "Bathroom Name",  autofocus: true %>
-      
+
       <%= f.input :country, label: "Country" do %>
         <%= f.select "country", options_for_select(countries_list) %>
       <% end %>
-  
+
       <%= f.input :province, label: "Province/State" do %>
         <%= f.select :province, options_for_select(us_states) %>
       <% end %>
-    
+
       <%= f.input :city, autofocus: true %>
-  
+
       <%= f.input :apartment, placeholder: "Apartment/Suite number if applicable" %>
-  
+
       <%= f.input :address, autofocus: true %>
-  
+
       <% if isAdmin? %>
         <%= f.button :submit, "Create my bathroom", class: "btn btn-success" %>
       <% else %>
@@ -39,5 +40,4 @@
     <% end %>
   </div>
 </div>
-
-
+</div>
