--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,9 +50,10 @@
 */
 
 html, body{
- background-color: #DCF3FF;
-
+ background-color: #F2FBFF;
+ text-color: #2E2E2E;
 }
+
 
  .myNavElementsLeftRight{
    float: right;
@@ -64,13 +65,13 @@ html, body{
  .myNavElementsLeftRight a {
    padding: 15px 15px 15px 15px;
    display: block;
-   color: white;
+   color: #2E2E2E;
    font-family: "Montserrat";
    text-align: center;
    text-decoration: none;
    font-size: 15px;
    font-weight: 100;
-   background-color: #1CA3EC;
+   background-color: #6FC4F3;
    /*
    border-style: solid;
    border-width: 1px;
@@ -80,9 +81,9 @@ html, body{
    padding: 15px 15px 15px 15px;
  }
  .myNavElementsLeftRight a:hover:not(.active) {
-   color: white;
+   color: #000000;
    font-family: "Montserrat";
-   background-color: #1593d6;
+   background-color: #1994D7; //1CA3EC
    /*
    background-color: #1CA3EC;
    border-top: solid #c0dae7 ;
@@ -102,13 +103,13 @@ html, body{
  .myNavElementsRight a {
    padding: 15px 15px 15px 15px;
    display: block;
-   color: white;
+   color: #2E2E2E;
    font-family: "Montserrat";
    text-align: center;
    text-decoration: none;
    font-size: 15px;
    font-weight: 100;
-   background-color: #1CA3EC;
+   background-color: #6FC4F3;
    /*
    border-style: solid;
    border-width: 1px;
@@ -118,9 +119,9 @@ html, body{
    padding: 15px 15px 15px 15px;
  }
  .myNavElementsRight a:hover:not(.active) {
-   color: white;
+   color: #000000;
    font-family: "Montserrat";
-   background-color: #1593d6;
+   background-color: #1994D7;
    /*
    border-top: solid #c0dae7 ;
    border-bottom: solid #c0dae7 ;
@@ -133,7 +134,7 @@ html, body{
    list-style-type: none;
    padding: 0px 0px 52px 0px;
    margin: 0px 0px 0px 0px;
-   background-color: #d6f0fd; //c0dae7
+   background-color: #C3E4F5; //c0dae7
  }
 
 //THIS IS THE BREAKPOINT BEFORE FKING SHIT UP
@@ -287,3 +288,7 @@ border: 0 none;
 }
 
 .clear { clear:both; }
+
+.container-fluid{
+  background-color: #EBF8FF;
+}
