--- a/app/views/baths/requests.html.erb
+++ b/app/views/baths/requests.html.erb
@@ -1,4 +1,7 @@
-<h1>Bathrooms that you have requested to add</h1>
+<div class="smallmotto">
+    <h2>Bathrooms You Have Requested To Add</h2>
+</div>
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-6 col-md-offset-3" style="min-width: 450px;">
             <% @baths.each do |bath| %>
@@ -46,3 +49,4 @@
             <% end %>
         </div>
     </div>
+</div>
