--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -2,12 +2,13 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-<h1>All bathrooms</h1>
-
+<div class="smallmotto">
+    <h2>All Bathrooms</h2>
+</div>
 <div class="container-fluid">
     <!--alex i couldnt get the formatting on this one-->
     <div class="row">
-        <div class="col-md-6 col-md-offset-3" style="min-width: 450px;">
+      <div class="col-md-6 col-md-offset-3" style="min-width: 450px;">
         <% if current_user.role == "female" || current_user.role == "male" %>
 
 
@@ -37,13 +38,7 @@
                                   </td>
                                 </tr>
 
-<<<<<<< Updated upstream
-=======
-<<<<<<< HEAD
 
-=======
->>>>>>> origin/master
->>>>>>> Stashed changes
                             </table>
 
 
@@ -86,6 +81,7 @@
                     </tr>
 
 
+
                     <tr style="border-bottom: 1px solid #fff">
                       <td colspan="2">
                         <div style="text-alighn:left; width:30%; float: left;"><%= link_to " Directions ", direction_path(bath), :class => 'btn btn-info' %></div>
@@ -106,7 +102,8 @@
         </div>
         </div>
     </div>
-</div>
+
 
 
         <% end %>
+</div>
