--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -2,7 +2,7 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-
+<div class="container-fluid">
 <table class="table" style="width:80%; float:left; margin-right: 5%;">
 
                         <tr>
@@ -22,7 +22,7 @@
                             <% else %>
                                 <td>No reviews yet</td>
                             <% end %>
-
+                            <td><%= link_to "Directions", direction_path(@bath), :class => 'btn btn-info' %></td>
                         </tr>
 
                         <tr>
@@ -136,7 +136,7 @@
 
             <% end %>
         <b><%= link_to "Leave A Review", new_bath_review_path(@bath), :class => 'btn btn-primary' %> </b>
-
+</div>
 <script type="text/javascript">
 //showsingle below
 myLatLng = new google.maps.LatLng({lat: <%= @bath.latitude %>, lng: <%= @bath.longitude %>});
