--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,7 @@
-<h2>Change your password</h2>
-
+<div class="smallmotto">
+    <h2>Change Your Password</h2>
+</div>
+<div class="container-fluid">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
@@ -23,3 +25,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
