--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,7 @@
-<h2>Forgot your password?</h2>
-
+<div class="smallmotto">
+    <h2>Forgot Your Password</h2>
+</div>
+<div class="container-fluid">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -14,3 +16,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
