--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,6 +1,7 @@
 <!-- Begin user profile page -->
-<h1>Profile</h1>
-
+<div class="smallmotto">
+    <h2>Profile</h2>
+</div>
 <div class="container-fluid">
 <div class= "row">
 <div style="width:100%;margin:auto;padding:none">
@@ -39,7 +40,7 @@
                     <td><%= request.location.city %></td>
                 </tr>
             </table>
-        
+
         <% elsif isAdmin? %>
             <% for user in  @user do%>
                 <% if user == current_user %>
@@ -64,7 +65,7 @@
                     </table>
                 <% else %>
                     <table class="table">
-                        
+
                         <tr>
                             <th>Name</th>
                             <td><%= user.name %></td>
@@ -80,7 +81,7 @@
                         <tr>
                             <td><%= link_to 'Destroy', admin_destroy_user_path(user), method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-danger' %></td>
                         </tr>
-                        
+
                     </table>
                 <% end %>
             <% end %>
@@ -88,6 +89,7 @@
         <div class="col-md-6 col-md-offset-3">
             <%= will_paginate @user %>
         </div>
+</div>
 </div>
 </div>
 </div>
