--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -3,7 +3,9 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-<h1>Map view of bathrooms</h1>
+<div id="motto">
+    <h3>Map view of bathrooms</h3>
+</div>
 
 
 <div style="width: 100%; margin: auto">
