--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,17 +1,18 @@
-<h1>Edit Your Review</h1>
-<div class="row">
+<div class="smallmotto">
+    <h2>Edit Your Review</h2>
+</div>
+<div class="container-fluid"><div class="row">
     <div class="col-md-6 col-md-offset-3 well">
         <%= simple_form_for [@bath, @review] do |f| %>
-            <div class="field">  
+            <div class="field">
                 <%= f.input :rating, :collection => 1..5, placeholder: 'Rate this bathroom from 1-5' %>
             </div>
-            
-            <div class="field">  
+
+            <div class="field">
                 <%= f.input :post, as: :text %>
             </div>
-                <%= f.button :submit, "Submit edit", class: "btn btn-success" %> 
+                <%= f.button :submit, "Submit edit", class: "btn btn-success" %>
         <% end %>
     </div>
 </div>
-
-
+</div>
