--- a/app/views/reviews/reported.html.erb
+++ b/app/views/reviews/reported.html.erb
@@ -1,5 +1,7 @@
-<h1>These are all the reviews that have been multiply reported by users</h1>
-<% @reviews.each do |review| %>
+<div class="smallmotto">
+    <h2>Reported Reviews</h2>
+</div>
+<div class="container-fluid"><% @reviews.each do |review| %>
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3" style="min-width: 450px">
@@ -19,9 +21,10 @@
             </table>
         </div>
 
-        
+
     </div>
 
 </div>
 
 <% end %>
+</div>
