--- a/app/views/baths/index.html.erb
+++ b/app/views/baths/index.html.erb
@@ -21,7 +21,8 @@ Moving this to main.scss ruins the slideshow
 	opacity: 0;
 	z-index: 1;
   background-color: #DCF3FF;
-
+  margin-left: 0 auto;
+  margin-right: 0 auto;
 
 	-webkit-transition: opacity 1s;
 	-moz-transition: opacity 1s;
@@ -32,6 +33,8 @@ Moving this to main.scss ruins the slideshow
 .showing{
 	opacity: 1;
 	z-index: 2;
+  margin-left: 0 auto;
+  margin-right: 0 auto;
 }
 
 
