--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -2,13 +2,9 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
+<h1><%= @bath.name %></h1>
 <div class="container-fluid">
 <table class="table" style="width:80%; float:left; margin-right: 5%;">
-
-                        <tr>
-                          <th> </th>
-                          <td style="font-size:25px; float:left;"><b><%= @bath.name %></b></td>
-                        </tr>
 
                         <tr>
                             <th><b>Location</b></th>
