--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -10,7 +10,7 @@ html, body, div, a {
   text-shadow: none;
   font-family: Optima, Segoe, "Segoe UI", Candara, Calibri, Arial, sans-serif;
   font-size: 18px;
-  //background-color:#DCF3FF;
+  // background-color:#DCF3FF;
 }
 
 body {
@@ -30,7 +30,7 @@ h3 {
   text-shadow: none;
   font-family: "Montserrat";
   text-align: center;
-  /*color: white*/
+  color: white
 }
 
 /* Motto */
@@ -38,7 +38,7 @@ h3 {
 	width:100%;
 	padding: 0.3rem;
 	margin: auto;
-	background-color: #6FC4F3; //1CA3EC 73C7F5
+	background-color: #1CA3EC; //1CA3EC 73C7F5
 	text-align: center;
 }
 
@@ -46,7 +46,7 @@ h3 {
   font-family: "Montserrat";
 	font-size: 1.5rem;
 	text-shadow: none;
-	/*color: white;*/
+	color: white;
 }
 
 
@@ -54,7 +54,7 @@ h3 {
 	width:100%;
 	padding: 0.3rem;
 	margin: auto;
-	background-color: #EBF8FF;
+// 	background-color: #EBF8FF;
 	text-align: center;
 }
 /*body {
