--- a/app/views/bath_images/index.html.erb
+++ b/app/views/bath_images/index.html.erb
@@ -1,4 +1,6 @@
-<h1>All the images for bathroom: <font color="green"><%= @bath.address %>, <%= @bath.city %></font></h1>
+<div id="motto">
+    <h1 style="color:white">All the images for <font color="#32CD32"><%= @bath.name %> at <%= @bath.address %></font></h1>
+</div>
 <% @bath.bath_images.each do |bath_image|%>
     <%= image_tag bath_image.photo.url(:large) %>
 <% end %>
