--- a/app/views/baths/edit.html.erb
+++ b/app/views/baths/edit.html.erb
@@ -1,6 +1,5 @@
-<div class="smallmotto">
-    <h2>Hello Admin</h2>
-    <h3>Here You Can Accept Or Deny Bathroom Requests</h3>
+<div id="motto">
+    <h1 style="color: white">Here You Can Accept Or Deny Bathroom Requests</h1>
 </div>
 <div class="container-fluid">
 <!--this will be a potential problem when our database gets full so make sure you change it-->
