--- a/app/views/baths/index.html.erb
+++ b/app/views/baths/index.html.erb
@@ -65,7 +65,7 @@ just for appearance; change whatever you want
 </style>
 
 <div id="motto">
-    <h3>You can prevent Bathroom Injuries!</h3>
+    <h1 style="color: white">You can prevent Bathroom Injuries!</h3>
 </div>
 
 <div id="navbox-container">
