--- a/app/views/baths/requests.html.erb
+++ b/app/views/baths/requests.html.erb
@@ -1,5 +1,5 @@
-<div class="smallmotto">
-    <h2>Bathrooms You Have Requested To Add</h2>
+<div id="motto">
+    <h1 style="color: white">Bathrooms You Have Requested To Add</h1>
 </div>
 <div class="container-fluid">
     <div class="row">
