--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,8 +1,8 @@
 <!-- Begin edit user information page -->
 
 
-<div class="smallmotto">
-    <h2>Edit</h2>
+<div id="motto">
+    <h1 style="color: white">Edit</h1>
 </div>
 <div class="container-fluid">
 
