--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="smallmotto">
-    <h2>Sign Up</h2>
+<div id="motto">
+    <h1 style="color: white">Sign Up</h1>
 </div>
 <div class="container-fluid">
 
