--- a/app/views/game/game.html.erb
+++ b/app/views/game/game.html.erb
@@ -14,7 +14,9 @@
 <script src="phaser.min.js"></script>
 </head>
 <body>
-<h1>Flappy Tissue</h1>
+<div id="motto">
+  <h1 style="color: white">Flappy Tissue</h1>
+</div>
 <div id="game"></div>
 <script src="game.js"></script>
 
