--- a/app/views/main/aboutus.html.erb
+++ b/app/views/main/aboutus.html.erb
@@ -3,8 +3,9 @@
 <!--
 IMAGE DIMENSIONS ARE 99px by 99px, or 3.49cm by 3.49cm
 -->
-
-<h1>Meet the Creators</h1>
+<div id="motto">
+  <h1 style="color: white">Meet the Creators</h1>
+</div>
 <br/>
 
 
