--- a/app/views/main/directions.html.erb
+++ b/app/views/main/directions.html.erb
@@ -46,8 +46,8 @@
 }
 </style>
 
-<div class="smallmotto">
-    <h2>Directions To <%= @bath.name %></h2>
+<div id="motto">
+    <h1 style= "color: white">Directions To <%= @bath.name %></h1>
 </div>
 <div class="container-fluid">
 
