--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,7 +1,7 @@
 <!-- Begin index file -->
 
 <div id="motto">
-    <h3>Bathroom Connoissuer? You're In Luck!</h3>
+    <h1 style="color: white">Bathroom Connoissuer? You're In Luck!</h3>
     <%= link_to"Browse all bathrooms", showbath_path, class: "btn btn-success" %>
 </div>
 
