--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -1,6 +1,6 @@
 <!-- Begin user profile page -->
-<div class="smallmotto">
-    <h2>Profile</h2>
+<div id="motto">
+    <h1 style="color: white">Profile</h2>
 </div>
 <div class="container-fluid">
 <div class= "row">
