--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -43,6 +43,10 @@
 </script>
 
 <center>
-    <h1>NEWS</h1>
+    
+<div id="motto">
+  <h1 style="color: white">News</h1>
+</div>
+
 <div id="news" style="height: 600px; overflow: auto;"></div>
 </center>
