--- a/app/views/baths/show.html.erb
+++ b/app/views/baths/show.html.erb
@@ -2,8 +2,10 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-<div class="smallmotto">
-    <h2>All Bathrooms</h2>
+
+
+<div id="motto">
+    <h1 style="color: white">All Bathrooms</h1>
 </div>
 <div class="container-fluid">
     <!--alex i couldnt get the formatting on this one-->
