--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -2,7 +2,9 @@
 <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
-<h1><%= @bath.name %></h1>
+<div id="motto">
+    <h1 style="color: white"><%= @bath.name %></h1>
+</div>
 <div class="container-fluid">
 <table class="table" style="width:80%; float:left; margin-right: 5%;">
 
@@ -102,7 +104,7 @@
 
 <div class="clear"></div>
 <!-- </center> -->
-<h2>Reviews</h2>
+<h1>Reviews</h1>
 
                     <% @bath.reviews.each do |review| %>
 
