--- a/app/views/main/nearme.html.erb
+++ b/app/views/main/nearme.html.erb
@@ -1,14 +1,15 @@
-<h1>These are the baths near you</h1>
-
+<div id="motto">
+  <h1 style="color: white">These are the baths near you</h1>
+</div>
     <% @baths.each do |bath| %>
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
 
-
-
-
-
                     <table class="table">
+                      <tr>
+                    <th> </th>
+                    <td style="font-size:25px; float:left;"><b><%= bath.name %></b></td>
+                      </tr>
                       <tr>
                           <th><b>Location</b></th>
                           <td><%= bath.city %>, <%= bath.address %></td>
