--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -4,7 +4,7 @@
 <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
 
 <div id="motto">
-    <h3>Map view of bathrooms</h3>
+    <h1 style="color: white">Map view of bathrooms</h3>
 </div>
 
 
