--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,5 @@
-<div class="smallmotto">
-    <h2>Add A Review</h2>
+<div id="motto">
+    <h1 style="color: white">Add A Review</h1>
 </div>
 <div class="container-fluid">
 <%= simple_form_for [@bath, @review] do |f| %>
@@ -15,4 +15,4 @@
         <%= f.button :submit, class: "btn btn-success" %>
 <% end %>
 </div>
-</div>
+</div><br>
