--- a/app/views/reviews/reported.html.erb
+++ b/app/views/reviews/reported.html.erb
@@ -1,5 +1,5 @@
-<div class="smallmotto">
-    <h2>Reported Reviews</h2>
+<div id="motto">
+    <h1 style="color: white">Reported Reviews</h1>
 </div>
 <div class="container-fluid"><% @reviews.each do |review| %>
 <div class="container">
