--- a/app/views/baths/index.html.erb
+++ b/app/views/baths/index.html.erb
@@ -8,7 +8,7 @@ Moving this to main.scss ruins the slideshow
 	height: 100%;
   width: 100%;
 	padding: 0px;
-  background-color: #DCF3FF;
+  background-color: white;
 	list-style-type: none;
 }
 
@@ -16,11 +16,11 @@ Moving this to main.scss ruins the slideshow
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	width: 100%
+	width: 100%;
 	height: 100%;
 	opacity: 0;
 	z-index: 1;
-  background-color: #DCF3FF;
+  background-color: white;
   margin-left: 0 auto;
   margin-right: 0 auto;
 
@@ -48,8 +48,8 @@ just for appearance; change whatever you want
 	font-size: 40px;
 	padding: 1px;
 	box-sizing: border-box;
-	background: #DCF3FF; /*DCF3FF*/
-	color: #DCF3FF;
+	background: white; /*DCF3FF*/
+	color: white;
 }
 
 .slide:nth-of-type(1){
