--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -274,7 +274,7 @@ html, body{
             -moz-border-radius:   13px;
             /* Opera 10.5, IE 9, Safari 5, Chrome, Firefox 4, iOS 4, Android 2.1+ */
             border-radius: 13px;
-            background-color: white;
+            background-color: #f5f5f5;
             color: black;
           }
 
