--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <div id="motto">
     <h1 style="color: white">Add A Review</h1>
 </div>
-<div class="container-fluid">
+<div class="col-md-12 well" style="color: black; background-color: white>
 <%= simple_form_for [@bath, @review] do |f| %>
     <div class="container">
     <div class="field">
