--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -6,7 +6,7 @@
 #navbox-container {
   margin-left: auto;
 	margin-right: auto;
-  background-color: white;
+  background-color: #f5f5f5;
   display: flex;
 }
 
