--- a/app/views/bath_images/new.html.erb
+++ b/app/views/bath_images/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Add your own photo</h1>
+<div id="motto">
+    <h1 style="color: white">Add your own photo</h1>
+</div>
 <div class="row">
     <div class="col-md-6 col-md-offset-3 well">
         <%= simple_form_for [@bath, @bath_image] do |f| %>
