--- a/app/views/baths/new.html.erb
+++ b/app/views/baths/new.html.erb
@@ -5,9 +5,9 @@
     <h1 style="color: white">Add Your Bathroom</h1>
 </div>
 <div class="row">
-  <div class="col-md-12 well" style="color: white; background-color: #74CCF4">
+  <div class="col-md-12 well">
     <%= simple_form_for @bath, html: {multipart: true, class: 'form-horizontal'} do |f| %>
-    <div class="container">
+    <div class= "col-md-6 col-md-offset-3">
       <% if @bath.errors.any? %>
         <div id="error_explanation">
           <h2><%= pluralize(@bath.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -39,8 +39,8 @@
       <% else %>
         <%=  f.button :submit, "Send bathroom request", class: "btn btn-success" %>
       <% end %>
-      </div>
+    </div>
     <% end %>
-
+  
 </div>
 </div>
