--- a/app/views/baths/showsingle.html.erb
+++ b/app/views/baths/showsingle.html.erb
@@ -11,6 +11,7 @@
                         <tr>
                             <th><b>Location</b></th>
                             <td><b><%= @bath.city %>, <%= @bath.address %></b></td>
+                            <td><%= link_to "Directions", direction_path(@bath), :class => 'btn btn-info' %></td>
                         </tr>
 
                         <tr>
@@ -20,7 +21,9 @@
                             <% else %>
                                 <td>No reviews yet</td>
                             <% end %>
-                            <td><%= link_to "Directions", direction_path(@bath), :class => 'btn btn-info' %></td>
+                            <td><%= link_to "Review", new_bath_review_path(@bath), :class => 'btn btn-primary' %></td>
+
+                            
                         </tr>
 
                         <tr>
@@ -28,22 +31,22 @@
                                 <% if @bath.bath_images.count == 0 %>
                                     <td>No images added yet!</td> <td><%= link_to "Add photo", new_bath_bath_image_path(@bath.id), :class => "btn btn-primary" %> </td>
                                 <% else %>
-                                    <td><% @bath.bath_images.each do |bath_image|%>
-                                            <%= image_tag bath_image.photo.url(:thumb) %>
-                                        <% end %>
-                                    </td>
+                                    <td> <%= link_to "View all photos", bath_bath_images_path(@bath), :class => "btn btn-info" %></td>
                                     <td>
                                         <%= link_to "Add photo", new_bath_bath_image_path(@bath.id), :class => "btn btn-primary" %>
-                                        <%= link_to "View all photos", bath_bath_images_path(@bath), :class => "btn btn-info" %>
+                                        
                                     </td>
+                                    
                                 <% end %>
                         </tr>
   </table>
+ <% if @bath.bath_images.count != 0 %>
+<div style="max-width:100%; max-height: 100%; float:left;"><%= image_tag @bath.bath_images.first.photo.url(:thumb) %></div> 
+ <% else %>
+<div style="max-width:100%; max-height: 100%; float:left;"><%= image_tag asset_path( 'noimage.png' ) %></div>
+ <% end %>
+ 
 
-<!--
-  <img src="images/image1.png" alt="FirstImage"
-  style="max-width:100%; height: 137px; float:left;" </img>
--->
 
 
 
@@ -104,7 +107,7 @@
 
 <div class="clear"></div>
 <!-- </center> -->
-<h1>Reviews</h1>
+<br><br>
 
                     <% @bath.reviews.each do |review| %>
 
