--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,11 +4,12 @@
 <div id="motto">
     <h1 style="color: white">Edit</h1>
 </div>
-<div class="container-fluid">
+
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3 well">
+  <div class="col-md-12 well">
     <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
+    <div class= "col-md-6 col-md-offset-3">
       <%= devise_error_messages! %>
 
       <%= f.input :name %>
@@ -41,7 +42,7 @@
     <% end %>
 
 
-    <h2>Cancel my account</h2>
+    <h1>Cancel my account</h1>
 
     <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
 
