--- a/app/views/baths/index.html.erb
+++ b/app/views/baths/index.html.erb
@@ -8,7 +8,7 @@ Moving this to main.scss ruins the slideshow
 	height: 100%;
   width: 100%;
 	padding: 0px;
-  background-color: white;
+  background-color: f5f5f5;
 	list-style-type: none;
 }
 
@@ -20,7 +20,7 @@ Moving this to main.scss ruins the slideshow
 	height: 100%;
 	opacity: 0;
 	z-index: 1;
-  background-color: white;
+  background-color: f5f5f5;
   margin-left: 0 auto;
   margin-right: 0 auto;
 
@@ -48,8 +48,8 @@ just for appearance; change whatever you want
 	font-size: 40px;
 	padding: 1px;
 	box-sizing: border-box;
-	background: white; /*DCF3FF*/
-	color: white;
+	background: f5f5f5; /*DCF3FF*/
+	color: f5f5f5;
 }
 
 .slide:nth-of-type(1){
