--- a/app/views/main/show.html.erb
+++ b/app/views/main/show.html.erb
@@ -87,7 +87,9 @@
             <% end %>
         <% end %>
         <div class="col-md-6 col-md-offset-3">
-            <%= will_paginate @user %>
+            <% if isAdmin? %>
+                <%= will_paginate @user %>
+            <% end %>
         </div>
 </div>
 </div>
